--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row justify-content-center align-items-center min-vh-100">
+            <div class="col-md-7 col-lg-6 col-xl-5">
+                <div class="card">
+                    <img src="images/illustration-hero.svg" alt="" class=" card-img-top">
+                    <div class="card-body text-center">
+                        <div class="p-5">
+                            <h1 class=" fw-bolder">Order Summary</h1>
+                            <p class="text-black-50">
+                                You can now listen to millions of songs, audiobooks, and podcasts on any 
+                                device anywhere you like!
+                            </p>
+                            <div class="bg-light p-4 d-flex justify-content-between align-items-center one">
+                                <div class="d-flex">
+                                    <img src="images/icon-music.svg" alt="" class="me-3">
+                                    <div>
+                                        <p class="mb-0 fw-bolder">Annual Plan</p>
+                                        <p class="mb-0 text-black-50">$59.99/year</p>
+                                    </div>
+                                </div>
+                                <a href="#">Change</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
