add button and finish pj

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                                 </div>
                                 <a href="#">Change</a>
                             </div>
+                            <a href="#" class="btn btn-lg btn-primary border-0 w-100 mt-5 shadow fw-bold payment">
+                                Proceed to Payment
+                            </a>
+                            <a href="#" class="btn btn-lg border-0 w-100 mt-3 fw-bold cancel">
+                                Cancel Order
+                            </a>
                         </div>
                     </div>
                 </div>
